# DumprXj

./: .gitignore  CHANGELOG_v2.md  MIGRATION.md  MIGRATION_SUMMARY.md  PYTHON_REFACTORING.md  README.md  README_v1.md  README_v2.md  WORKFLOW_EXAMPLES.md  cleanup.sh  config.yaml  dumper.py  dumper.sh  dumper_new.sh  dumper_old.sh  dumper_v2.sh  dumprx  dumprx.py  dumprx_main.py  migrate_to_v2.py  pyproject.toml  requirements.txt  setup.py  setup.sh  setup_dumprx.py  setup_new.py  setup_py.py  setup_v2.py  telegram_bot.sh  test_dumprx.py  validate-workflow.sh  validate-workflow_old.sh  validate.py  validate_workflow.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: firmware-dump.yml
dumprx/: __init__.py  cli.py  config.py  config_manager.py  console.py  detector.py  downloaders.py  extractors.py  firmware_analyzer.py  git_ops.py  telegram.py
dumprx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
dumprx/core/: __init__.py  config.py  detector.py  device_detector.py  downloader.py  dumper.py  external_tools.py  firmware_detector.py  firmware_extractor.py  firmware_processor.py  git_manager.py  logger.py  telegram_bot.py
dumprx/downloaders/: __init__.py  afh.py  direct.py  downloader.py  enhanced_downloader.py  gdrive.py  manager.py  mediafire.py  mega.py  mega_downloader.py
dumprx/extractors/: __init__.py  archive.py  archive_extractor.py  boot_unpacker.py  enhanced_boot_analyzer.py  firmware.py  firmware_detector.py  image.py  kdz_extractor.py  manager.py  manufacturer_detector.py  ofp_extractor.py  ops_extractor.py  ozip_extractor.py  payload_extractor.py  super_extractor.py  update_app_extractor.py
dumprx/integrations/: __init__.py  telegram_bot.py
dumprx/utils/: __init__.py  boot_unpacker.py  console.py  git_integration.py  logging.py  telegram_bot.py  ui.py
dumprx/vendors/: generic.py  htc.py  lg.py  oppo.py
legacy/: README.md
lib/: config.py  download.py  downloader.sh  extractor.py  extractors.sh  firmware.py  git.py  git.sh  loader.sh  logging.py  metadata.sh  setup.sh  telegram.py  ui.py  ui.sh  utils.sh
lib/core/: config.py  config.sh  exceptions.py  logger.py  validator.py
lib/downloaders/: manager.py  services.sh  url_detector.py
lib/extractors/: bootimg.sh  detector.py  extractors.py  manager.py  partitions.sh
lib/git/: manager.py
lib/manufacturers/: detection.sh
lib/messaging/: telegram.sh  ui.sh
lib/telegram/: bot.py
lib/utils/: command.py  common.sh  filesystem.py  progress.py
src/dumprx/: __init__.py
src/dumprx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/dumprx/boot/: __init__.py
src/dumprx/cli/: __init__.py
src/dumprx/core/: __init__.py  config.py  config_old.py  dumper.py  logger.py
src/dumprx/downloaders/: __init__.py
src/dumprx/manufacturers/: __init__.py  base.py  generic.py  htc.py  huawei.py  lg.py  oppo.py  samsung.py  sony.py  xiaomi.py
src/dumprx/modules/: __init__.py  detector.py  downloader.py  extractor.py  git_manager.py  partition.py  telegram_bot.py  vendor.py
src/dumprx/telegram/: __init__.py
src/dumprx/utils/: advanced_downloader.py  archive_utils.py  boot_unpacker.py  file_utils.py
